[package]
name = "arrpc_rs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
futures-util = "0.3.30"
owo-colors = "4.0.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
